--- a/modules/integration_azure-mariadb/conf/05-replication-lag.yaml
+++ b/modules/integration_azure-mariadb/conf/05-replication-lag.yaml
@@ -4,7 +4,7 @@ name: "replication lag"
 transformation: true
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 
-filtering: "filter('resource_type', 'Microsoft.DBforMariaDB/servers') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.DB*orMariaDB/servers') and filter('primary_aggregation_type', 'true')"
 value_unit: "Second"
 
 signals:
