--- a/modules/fame_azure-vpn/conf/01-ike-events.yaml
+++ b/modules/fame_azure-vpn/conf/01-ike-events.yaml
@@ -1,6 +1,6 @@
 module: Azure VPN
 name: Successful IKE Events
-id: ikesucess
+id: ikesuccess
 
 transformation: true
 aggregation: true
@@ -12,11 +12,11 @@ signals:
 rules:
   critical:
     threshold: 0
-    comparator: "="
+    comparator: "=="
     lasting_duration: '10m'
   major:
     threshold: 0
-    comparator: "="
+    comparator: "=="
     lasting_duration: '5m'
 
 
