Add lasting_duration to integration_azure-datafactory

--- a/modules/integration_azure-datafactory/conf/02-adf-pipeline-run.yaml
+++ b/modules/integration_azure-datafactory/conf/02-adf-pipeline-run.yaml
@@ -16,7 +16,9 @@ rules:
   critical:
     threshold: 20
     comparator: ">"
+    lasting_duration: null
   major:
     threshold: 10
     comparator: ">"
     dependency: critical
+    lasting_duration: null
