--- a/modules/integration_azure-storage-file-premium/conf/01-capacity.yaml
+++ b/modules/integration_azure-storage-file-premium/conf/01-capacity.yaml
@@ -1,8 +1,6 @@
-# FIXME not working with azure_tag_sfx_monitored ¯\_(ツ)_/¯
 module: "Azure Storage Account File share"
 name: "capacity"
-# TODO add a specific filter for premium file shares
-filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts/fileServices') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts/fileServices') and filter('primary_aggregation_type', 'true') and filter('azure_sa_sku', ' Premium_*')"
 aggregation: ".fill(None, duration='1d').mean(by=['fileshare', 'azure_resource_id'])"
 transformation: ".min(over='1d')"
 value_unit: "%"
