--- a/modules/integration_azure-storage-file-standard/conf/04-throttling.yaml
+++ b/modules/integration_azure-storage-file-standard/conf/04-throttling.yaml
@@ -1,8 +1,6 @@
-# FIXME not working with azure_tag_sfx_monitored ¯\_(ツ)_/¯
 module: "Azure Storage Account File share"
 name: "throttling"
-# TODO add a specific filter for standard file shares
-filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts/fileServices') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts/fileServices') and filter('primary_aggregation_type', 'true') and filter('azure_sa_sku', ' Premium_*')"
 aggregation: ".sum(by=['FileShare', 'azure_resource_id'])"  # TODO some lacking dimensions here
 transformation: ".min(over='15m')"
 value_unit: "%"
