--- a/modules/integration_gcp-memorystore-redis/conf/readme.yaml
+++ b/modules/integration_gcp-memorystore-redis/conf/readme.yaml
@@ -1,3 +1,6 @@
 documentations:
-
+  - name: Stackdriver metrics for Memorystore for Redis
+    url: https://cloud.google.com/monitoring/api/metrics_gcp#gcp-redis
+  - name: Splunk Observability metrics
+    url: https://docs.splunk.com/Observability/gdi/get-data-in/connect/gcp.html
 source_doc:
