--- a/modules/integration_gcp-memorystore-redis/conf/01-blocked-clients.yaml
+++ b/modules/integration_gcp-memorystore-redis/conf/01-blocked-clients.yaml
@@ -1,5 +1,5 @@
 ## Example
-module: GCP MemoryStore Redis
+module: GCP Memorystore Redis
 name: blocked over connected clients ratio
 
 value_unit: "%"
