FAME file storage & VM backup detectors - suggestions

--- a/modules/fame_azure-storage-file-backup/conf/01-file-backup.yaml
+++ b/modules/fame_azure-storage-file-backup/conf/01-file-backup.yaml
@@ -1,6 +1,8 @@
 module: Azure Storage File backup
 name: success
-id: backup
+id: file_backup
+transformation: true
+aggregation: true
 
 signals:
   signal:
