--- a/modules/integration_aws-elb/conf/05-backend-4xx.yaml
+++ b/modules/integration_aws-elb/conf/05-backend-4xx.yaml
@@ -19,9 +19,17 @@ signals:
   signal:
     formula: (errors/requests).scale(100).fill(value=0)
 rules:
+  critical:
+    threshold: 99
+    comparator: ">"
+    lasting_duration: 15m
+    lasting_at_least: 0.9
+    append_condition: and when(requests > ${var.minimum_traffic})
+    disabled: true
   major:
     threshold: 95
     comparator: ">"
+    dependency: critical
     lasting_duration: 15m
     lasting_at_least: 0.9
     append_condition: and when(requests > ${var.minimum_traffic})
