fix(smart-agent_redis): Reduce hitrate detector severity
Other hitrate/hitratio detectors doesn't use critical level:

* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_memcached#what-are-the-available-detectors-in-this-module
* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_postgresql#what-are-the-available-detectors-in-this-module
* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_varnish#what-are-the-available-detectors-in-this-module

--- a/modules/smart-agent_redis/conf/10-hitrate.yaml
+++ b/modules/smart-agent_redis/conf/10-hitrate.yaml
@@ -14,12 +14,12 @@ signals:
     formula: (A/(A+B)).scale(100)
 
 rules:
-  critical:
+  major:
     threshold: 10
     comparator: '<'
     lasting_duration: 5m
-  major:
+  minor:
     threshold: 30
     comparator: '<'
     lasting_duration: 5m
-    dependency: critical
+    dependency: major
