fix(smart-agent_redis): Keep critical severity, but disabled by default

--- a/modules/smart-agent_redis/conf/10-hitrate.yaml
+++ b/modules/smart-agent_redis/conf/10-hitrate.yaml
@@ -14,10 +14,16 @@ signals:
     formula: (A/(A+B)).scale(100)
 
 rules:
+  critical:
+    threshold: 0
+    comparator: '<'
+    lasting_duration: 5m
+    disabled: true
   major:
     threshold: 10
     comparator: '<'
     lasting_duration: 5m
+    dependency: critical
   minor:
     threshold: 30
     comparator: '<'
