--- a/modules/integration_aws-alb/conf/readme.yaml
+++ b/modules/integration_aws-alb/conf/readme.yaml
@@ -1,5 +1,5 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-cloudwatch-metrics.html'
-  - name: Splunk Observability metrics
-    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#aws-application-load-balancer-alb'
+  - name: Splunk Observability metadata
+    url: 'https://docs.splunk.com/Observability/infrastructure/monitor/aws-infra-metadata.html#cloudwatch-elb-metadata'
