--- a/modules/integration_aws-apigateway/conf/readme.yaml
+++ b/modules/integration_aws-apigateway/conf/readme.yaml
@@ -1,5 +1,5 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/apigateway/latest/developerguide/api-gateway-metrics-and-dimensions.html'
-  - name: Splunk Observability metrics
-    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#aws-api-gateway'
+  - name: Splunk Observability metadata
+    url: 'https://docs.splunk.com/Observability/infrastructure/monitor/aws-infra-metadata.html#amazon-api-gateway-metadata'
