--- a/modules/integration_gcp-load-balancing/conf/02-errors-4xx.yaml
+++ b/modules/integration_gcp-load-balancing/conf/02-errors-4xx.yaml
@@ -21,15 +21,23 @@ signals:
     formula: (errors/requests).scale(100).fill(value=0)
 rules:
   critical:
-    threshold: 10
+    threshold: 99
     comparator: ">"
-    lasting_duration: 5m
+    lasting_duration: 15m
     lasting_at_least: 0.9
     append_condition: and when(requests > ${var.minimum_traffic})
+    disabled: true
   major:
-    threshold: 5
+    threshold: 95
     comparator: ">"
     dependency: critical
-    lasting_duration: 5m
+    lasting_duration: 15m
+    lasting_at_least: 0.9
+    append_condition: and when(requests > ${var.minimum_traffic})
+  minor:
+    threshold: 90
+    comparator: ">"
+    dependency: major
+    lasting_duration: 15m
     lasting_at_least: 0.9
     append_condition: and when(requests > ${var.minimum_traffic})
