fix: Reduce hitrate detector severity (#436)
* fix(smart-agent_redis): Reduce hitrate detector severity

Other hitrate/hitratio detectors doesn't use critical level:

* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_memcached#what-are-the-available-detectors-in-this-module
* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_postgresql#what-are-the-available-detectors-in-this-module
* https://github.com/claranet/terraform-signalfx-detectors/tree/master/modules/smart-agent_varnish#what-are-the-available-detectors-in-this-module

* fix(smart-agent_redis): Keep critical severity, but disabled by default

--- a/modules/smart-agent_redis/conf/10-hitrate.yaml
+++ b/modules/smart-agent_redis/conf/10-hitrate.yaml
@@ -15,11 +15,17 @@ signals:
 
 rules:
   critical:
+    threshold: 0
+    comparator: '<'
+    lasting_duration: 5m
+    disabled: true
+  major:
     threshold: 10
     comparator: '<'
     lasting_duration: 5m
-  major:
+    dependency: critical
+  minor:
     threshold: 30
     comparator: '<'
     lasting_duration: 5m
-    dependency: critical
+    dependency: major
