--- a/modules/integration_aws-dms/conf/01-task-restart.yaml
+++ b/modules/integration_aws-dms/conf/01-task-restart.yaml
@@ -3,7 +3,7 @@ name: Task has restarted
 id: task_restart
 
 filtering: "filter('namespace', 'AWS/DMS')"
-transformation: false
+transformation: ".max(over='15m')"
 
 A: "A = data('RunCounter', filter('namespace', 'AWS/DMS') and filter('stat', 'upper')).publish(label='A')"
 
@@ -19,5 +19,4 @@ rules:
   critical:
     threshold: 1
     comparator: ">"
-    lasting_duration: 5m
     lasting_at_least: 0.9
