--- a/modules/integration_azure-cdn/conf/00-latency.yaml
+++ b/modules/integration_azure-cdn/conf/00-latency.yaml
@@ -1,17 +1,24 @@
 module: Azure CDN
 name: latency
 filtering: "filter('resource_type', 'microsoft.cdn/profiles') and filter('primary_aggregation_type', 'true')"
+id: cdn_total_latency
 
-transformation: ".max(over='15m')"
+transformation: true
+aggregation: true
 
 signals:
   signal:
     metric: "TotalLatency"
+    rollup: max
+
 rules:
   critical:
     threshold: 1500
     comparator: ">"
+    lasting_duration: 15m
+
   major:
     threshold: 3000
     comparator: ">"
     dependency: critical
+    lasting_duration: 15m
