Multiple fix on CDN detector

--- a/modules/integration_azure-cdn/conf/00-latency.yaml
+++ b/modules/integration_azure-cdn/conf/00-latency.yaml
@@ -2,6 +2,7 @@ module: Azure CDN
 name: latency
 filtering: "filter('resource_type', 'microsoft.cdn/profiles') and filter('primary_aggregation_type', 'true')"
 id: cdn_total_latency
+value_unit: ms
 
 transformation: true
 aggregation: true
@@ -9,16 +10,15 @@ aggregation: true
 signals:
   signal:
     metric: "TotalLatency"
-    rollup: max
 
 rules:
   critical:
-    threshold: 1500
+    threshold: 3000
     comparator: ">"
     lasting_duration: 15m
 
   major:
-    threshold: 3000
+    threshold: 1500
     comparator: ">"
     dependency: critical
     lasting_duration: 15m
