Fix wrong dependency in rules
The dependency is applied on critical rules instead of major rules, therefore critical rules are never triggered

--- a/modules/integration_aws-rds-common/conf/05-dbload.yaml
+++ b/modules/integration_aws-rds-common/conf/05-dbload.yaml
@@ -11,12 +11,12 @@ signals:
   signal:
     metric: "DBLoad"
 rules:
-  major:
-    threshold: 80
-    comparator: ">"
-    lasting_duration: '5m'
   critical:
     threshold: 90
     comparator: ">"
     lasting_duration: '5m'
-    dependency: major
+  major:
+    threshold: 80
+    comparator: ">"
+    lasting_duration: '5m'
+    dependency: critical
