Add mean to group by hostname and fix severity on services check

--- a/modules/prometheus-exporter_active-directory/conf/01-replication-status.yaml
+++ b/modules/prometheus-exporter_active-directory/conf/01-replication-status.yaml
@@ -3,7 +3,7 @@ name: Replication Errors
 id: replication_errors
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['host.name'])"
 
 signals:
   A:
