--- a/modules/integration_azure-automation-account/conf/01-jobs.yaml
+++ b/modules/integration_azure-automation-account/conf/01-jobs.yaml
@@ -1,6 +1,6 @@
 ## Example
 module: Azure Automation Account
-name: jobs
+name: "failed jobs"
 
 transformation: ".count(over='1h')"
 aggregation: ".count(by=['runbook'])"
