--- a/modules/integration_azure-automation-account/conf/readme.yaml
+++ b/modules/integration_azure-automation-account/conf/readme.yaml
@@ -1,4 +1,4 @@
 documentations:
- - name: Azure Monitor
-    url: https://learn.microsoft.com/en-us/azure/azure-monitor/essentials/metrics-supported#microsoftautomationautomationaccounts
+    - name: 'Azure Monitor'
+      url: 'https://learn.microsoft.com/en-us/azure/azure-monitor/essentials/metrics-supported#microsoftautomationautomationaccounts'
 source_doc:
