Add only a scale factor of 2 on success and fill blank metrics with 0

--- a/modules/integration_azure-automation-account/conf/01-jobs.yaml
+++ b/modules/integration_azure-automation-account/conf/01-jobs.yaml
@@ -15,7 +15,7 @@ signals:
     metric: "TotalJob"
     filter: "filter('status', 'Failed')"
   signal:
-    formula: (failed - success.scale(10)).min(over='1h')
+    formula: (failed.fill(0) - success.fill(0).scale(2))
 rules:
   critical:
     threshold: 0
