--- a/modules/integration_azure-automation-account/conf/01-jobs.yaml
+++ b/modules/integration_azure-automation-account/conf/01-jobs.yaml
@@ -15,7 +15,7 @@ signals:
     metric: "TotalJob"
     filter: "filter('status', 'Failed')"
   signal:
-    formula: (failed.fill(0) - success.fill(0).scale(2))
+    formula: (failed.fill(0) - success.fill(0))
 rules:
   critical:
     threshold: 0
