--- a/modules/integration_aws-backup/conf/00-aws-backup-failed.yaml
+++ b/modules/integration_aws-backup/conf/00-aws-backup-failed.yaml
@@ -2,21 +2,15 @@ module: AWS Backup
 name: failed
 id: backup_failed
 
-transformation: ".min(over='1h')"
+transformation: ".max(over='1d').fill(0)"
 aggregation: true
-filtering: "filter('namespace', 'AWS/Backup')"
-value_unit: "count"
+filtering: "filter('namespace', 'AWS/Backup') and filter('stat', 'sum')"
 
 signals:
-  failed:
-    metric: NumberOfBackupJobsFailed
-    extrapolation: zero
-    rollup: sum
   signal:
-    formula: failed
+    metric: NumberOfBackupJobsFailed
 rules:
   critical:
     threshold: 0
     comparator: ">"
-    lasting_duration: 2h
-    lasting_at_least: 0.9
+    lasting_duration: '1h'
