--- a/modules/integration_aws-backup/conf/05-aws-backup-rp-expired.yaml
+++ b/modules/integration_aws-backup/conf/05-aws-backup-rp-expired.yaml
@@ -2,21 +2,15 @@ module: AWS Backup
 name: recovery point expired
 id: backup_rp_expired
 
-transformation: ".min(over='1h')"
+transformation: ".max(over='1d').fill(0)"
 aggregation: true
-filtering: "filter('namespace', 'AWS/Backup')"
-value_unit: "count"
+filtering: "filter('namespace', 'AWS/Backup') and filter('stat', 'sum')"
 
 signals:
-  failed:
-    metric: NumberOfRecoveryPointsExpired
-    extrapolation: zero
-    rollup: sum
   signal:
-    formula: failed
+    metric: NumberOfRecoveryPointsExpired
 rules:
   major:
     threshold: 0
     comparator: ">"
-    lasting_duration: 2h
-    lasting_at_least: 0.9
+    lasting_duration: '1h'
