style(aws_backup): lowercase name
Co-authored-by: Patrick Decat <patrick.decat@fr.clara.net>

--- a/modules/integration_aws-backup/conf/03-aws-backup-check.yaml
+++ b/modules/integration_aws-backup/conf/03-aws-backup-check.yaml
@@ -1,5 +1,5 @@
 module: AWS Backup
-name: Check jobs completed successfully
+name: check jobs completed successfully
 id: backup_successful
 
 transformation: ".min(over='23h')"
