integration_aws-amazonmq-rabbitmq

--- a/modules/integration_aws-amazonmq-rabbitmq/conf/05-disk-free.yaml
+++ b/modules/integration_aws-amazonmq-rabbitmq/conf/05-disk-free.yaml
@@ -12,7 +12,7 @@ signals:
   B:
     metric: RabbitMQDiskFreeLimit
   signal:
-    formula: ((A / B)/1024**3)
+    formula: ((A - B)/1024**3)
 
 rules:
   critical:
