--- a/modules/smart-agent_galera/conf/readme.yaml
+++ b/modules/smart-agent_galera/conf/readme.yaml
@@ -10,7 +10,7 @@ documentations:
 notes: |
   To prepare the Mysql server allowing monitoring you can use [this terraform module](https://github.com/claranet/terraform-signalfx-integrations/tree/master/database/mysql).
 
-  This module is usually used in addition with the [MySQL](../database/mysql) module.
+  This module is usually used in addition with the [MySQL](../smart-agent_galera/) module.
 
 source_doc: |
   This module is only based on the [sql](https://docs.splunk.com/Observability/gdi/sql/sql.html) monitor.
