--- a/modules/smart-agent_system-common/conf/06-swap.yaml
+++ b/modules/smart-agent_system-common/conf/06-swap.yaml
@@ -6,7 +6,7 @@ value_unit: "%"
 signals:
   signal:
     metric: system.paging.utilization
-    filter: "filter('state': 'used')"
+    filter: "filter('state', 'used')"
 rules:
   critical:
     threshold: 95
