--- a/modules/integration_azure-backup/conf/01-vm.yaml
+++ b/modules/integration_azure-backup/conf/01-vm.yaml
@@ -4,6 +4,7 @@ name: "VM"
 filtering: "filter('resource_type', 'Microsoft.RecoveryServices/vaults') and filter('primary_aggregation_type', 'true') and filter('datasourcetype', 'Microsoft.Compute/virtualMachines') and filter('healthstatus', 'Healthy')"
 aggregation: ".max(by=['backupinstancename', 'azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".fill(0)"
+max_delay: 900
 signals:
   signal:
     metric: "BackupHealthEvent"
