Azure Backup detectors for VM & File Shares - fix (#468)
* Azure Backup detectors for VM & File Shares - remove threshold dependency

* Azure Backup detectors for VM & File Shares - settings max delay

* Azure Backup detectors for VM & File Shares - raise thresholds

--- a/modules/integration_azure-backup/conf/02-file-share.yaml
+++ b/modules/integration_azure-backup/conf/02-file-share.yaml
@@ -4,6 +4,7 @@ name: "File Share"
 filtering: "filter('resource_type', 'Microsoft.RecoveryServices/vaults') and filter('primary_aggregation_type', 'true') and filter('datasourcetype', 'Microsoft.Storage/storageAccounts/fileServices/shares') and filter('healthstatus', 'Healthy')"
 aggregation: ".max(by=['backupinstancename', 'azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".fill(0)"
+max_delay: 900
 signals:
   signal:
     metric: "BackupHealthEvent"
@@ -12,10 +13,9 @@ rules:
   critical:
     threshold: 1
     comparator: "<"
-    lasting_duration: '50h'
+    lasting_duration: '60h'
   major:
     threshold: 1
     comparator: "<"
-    lasting_duration: '26h'
-    dependency: critical
+    lasting_duration: '36h'
 ...
