Add heartbeat_aggregation_function on azure_resource_id

--- a/modules/integration_azure-firewall/conf/00-heartbeat.yaml
+++ b/modules/integration_azure-firewall/conf/00-heartbeat.yaml
@@ -3,7 +3,7 @@ module: Azure firewall
 name: heartbeat
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['azure_resource_id'])"
 
 filtering: "filter('resource_type', 'Microsoft.Network/azureFirewalls') and filter('primary_aggregation_type', 'true')"
 
