Azure Update Management monitoring with Fame - extrapolation

--- a/modules/fame_azure-automation-updates/conf/01-failed-updates.yaml
+++ b/modules/fame_azure-automation-updates/conf/01-failed-updates.yaml
@@ -8,6 +8,7 @@ signals:
   signal:
     metric: fame.azure.automation_update.updates_status
     filter: filter('status', 'failed')
+    extrapolation: zero
 
 rules:
   major:
