--- a/modules/fame_azure-automation-updates/conf/02-missing-updates.yaml
+++ b/modules/fame_azure-automation-updates/conf/02-missing-updates.yaml
@@ -8,6 +8,7 @@ signals:
   signal:
     metric: fame.azure.automation_update.missing_updates
     filter: filter('classification', 'security', 'critical')
+    extrapolation: zero
 
 rules:
   major:
