--- a/modules/fame_azure-update-center/conf/01-failed-updates.yaml
+++ b/modules/fame_azure-update-center/conf/01-failed-updates.yaml
@@ -8,6 +8,7 @@ signals:
   signal:
     metric: fame.azure.update_center.updates_status
     filter: filter('status', 'failed')
+    extrapolation: zero
 
 rules:
   major:
