--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Enable destroy
       if: env.SFX_AUTH_TOKEN != null
-      run: echo ::set-output name=enabled::1
+      run: echo "enabled=1" >> $GITHUB_ENV
       id: destroy
 
     - name: Terraform Apply
