for cpu get cwagent metrique instead of general metric

--- a/modules/integration_aws-cwagent/conf/03-cpu_usage_active.yaml
+++ b/modules/integration_aws-cwagent/conf/03-cpu_usage_active.yaml
@@ -6,7 +6,7 @@ transformation: ".min(over='1h')"
 value_unit: "%"
 signals:
   signal:
-    metric: CPUUtilization
+    metric: cpu_usage_active
     extrapolation: zero
 rules:
   critical:
