fix based on latest commments in my pull request

--- a/modules/integration_aws-cwagent/conf/02-disk_used_percent.yaml
+++ b/modules/integration_aws-cwagent/conf/02-disk_used_percent.yaml
@@ -1,6 +1,6 @@
 ## Example
 module: AWS CWAgent
-name: "Utilisation du disque"
+name: "Disk Used"
 id: disk
 transformation: ".min(over='1h')"
 value_unit: "%"
