--- a/modules/integration_aws-cwagent/conf/01-mem_used_percent.yaml
+++ b/modules/integration_aws-cwagent/conf/01-mem_used_percent.yaml
@@ -1,6 +1,6 @@
 ## Example
 module: AWS CWAgent
-name: "Utilisation de la mémoire"
+name: "Memory used"
 id: mem
 transformation: ".min(over='1h')"
 value_unit: "%"
