--- a/modules/integration_aws-cwagent/conf/03-cpu_usage_active.yaml
+++ b/modules/integration_aws-cwagent/conf/03-cpu_usage_active.yaml
@@ -1,6 +1,6 @@
 ## Example
 module: AWS CWAgent
-name: "Utilisation CPU"
+name: "CPU Usage Active"
 id: cpu
 transformation: ".min(over='1h')"
 value_unit: "%"
