--- a/modules/integration_aws-cwagent/conf/readme.yaml
+++ b/modules/integration_aws-cwagent/conf/readme.yaml
@@ -1,3 +1,5 @@
 documentations:
-
-source_doc:
+  - name: CloudWatch metrics
+    url: 'https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/metrics-collected-by-CloudWatch-agent.html'
+  - name: Splunk Observability metadata
+    url: 'https://docs.splunk.com/Observability/infrastructure/monitor/aws-infra-metadata.html#metadata-available-per-service'
