fix - [BUG] Splunk changed Gigibyte to Gibibyte #474

--- a/modules/integration_aws-efs/conf/01-used-space.yaml
+++ b/modules/integration_aws-efs/conf/01-used-space.yaml
@@ -1,7 +1,7 @@
 module: "AWS EFS"
 name: "Used Space"
 filtering: "filter('namespace', 'AWS/EFS')"
-value_unit: "Gigibyte"
+value_unit: "Gibibyte"
 transformation: ".max(over='15m')"
 signals:
   used_space:
